header footer done, started main content

--- a/app/index.html
+++ b/app/index.html
@@ -5,188 +5,83 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RUH | Home Page</title>
+    <title>Home Page | RUH</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-<div class="general-container">
+<body class="general-container">
+
 <header>
     <div class="container">
         <div class="nav-wrapper">
             <a href="#" class="logo">
-                <img src="https://img.svg.com/img/svgdotcom_logo_color.svg" alt="logo">
+                <img src="img/logo.svg" alt="logo">
             </a>
             <nav>
-                <a href="#" class="logo show-mob">
-                    <img src="https://img.svg.com/img/svgdotcom_logo_color.svg" alt="logo">
-                </a>
-                <div class="burger show-mob"><span></span></div>
+                <div class="aside-top show-mob">
+                    <a href="#" class="logo">
+                        <img src="img/logo.svg" alt="logo">
+                    </a>
+                    <div class="burger opened">
+                        <span></span>
+                    </div>
+                </div>
                 <ul>
-                    <li><a href="#">Main</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Articles</a></li>
+                    <li><a data-link="1" href="#" class="active">Главная</a></li>
+                    <li><a data-link="2" href="#">О нас</a></li>
+                    <li><a data-link="3" href="#">Услуги</a></li>
+                    <li><a data-link="4" href="#">Статьи</a></li>
                 </ul>
-                <a href="#" class="button show-mob">Sign up for consultation</a>
-                <a href="#" class="button show-mob">Call</a>
+                <div class="btn-holder show-mob">
+                    <a href="#" class="button">Запись на консультацию</a>
+                    <a href="#" class="button">Позвонить</a>
+                </div>
             </nav>
         </div>
         <div class="action-wrapper">
-            <a href="#" class="button">Sign up for consultation</a>
-            <div class="burger show-mob"><span></span></div>
+            <a href="#" class="button">Запись на консультацию</a>
+            <div class="burger show-mob">
+                <span></span>
+            </div>
         </div>
     </div>
 </header>
 <main>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto, debitis reprehenderit, possimus et
-        facilis dolores labore nobis nam, sequi fuga? Similique quos, mollitia maxime animi cumque eius officiis
-        recusandae.</p>
+    <div class="container">
+        <div class="main-articles-holder">
+            <div class="introduction">
+                <h2>ВАШ НАДЕЖНЫЙ ПАРТНЕР В СФЕРЕ ЮРИДИЧЕСКИХ УСЛУГ</h2>
+                <div class="video-holder">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LXb3EKWsInQ" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
-<!--<footer>-->
-	<!--<div class="container">-->
-		<!--<ul>-->
-			<!--<li><a href="privacy-policy.html">Privacy Policy</a></li>-->
-			<!--<li><a href="cookies-policy.html">Cookies Policy</a></li>-->
-			<!--<li><a href="terms-of-use.html">Terms of Use</a></li>-->
-		<!--</ul>-->
-	<!--</div>-->
-<!--</footer>-->
-</div>
+<footer>
+    <div class="container">
+        <div class="nav-wrapper">
+            <a href="#" class="logo">
+                <img src="img/logo.svg" alt="logo">
+            </a>
+            <nav>
+                <ul>
+                    <li><a data-link="1" href="#" class="active">Главная</a></li>
+                    <li><a data-link="2" href="#">О нас</a></li>
+                    <li><a data-link="3" href="#">Услуги</a></li>
+                    <li><a data-link="4" href="#">Статьи</a></li>
+                </ul>
+                <div class="rights">
+                    <span><a href="https://ruh.com.ua">ruh.com.ua</a>©2019 Все права защищены.</span>
+                </div>
+            </nav>
+        </div>
+        <div class="action-wrapper">
+            <a href="#" class="button">Запись на консультацию</a>
+        </div>
+    </div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
 <script src="js/libs.min.js"></script>
 </body>
