index done, start services

--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,17 @@
     <title>Home Page | RUH</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
-<body class="general-container">
+<body>
 
 <header>
     <div class="container">
         <div class="nav-wrapper">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img src="img/logo.svg" alt="logo">
             </a>
             <nav>
                 <div class="aside-top show-mob">
-                    <a href="#" class="logo">
+                    <a href="index.html" class="logo">
                         <img src="img/logo.svg" alt="logo">
                     </a>
                     <div class="burger opened">
@@ -26,12 +26,12 @@
                     </div>
                 </div>
                 <ul>
-                    <li><a data-link="1" href="#" class="active">Главная</a></li>
+                    <li><a data-link="1" href="index.html" class="active">Главная</a></li>
                     <li><a data-link="2" href="#">О нас</a></li>
-                    <li><a data-link="3" href="#">Услуги</a></li>
+                    <li><a data-link="3" href="services.html">Услуги</a></li>
                     <li><a data-link="4" href="#">Статьи</a></li>
                 </ul>
-                <div class="btn-holder show-mob">
+                <div class="btn-menu-holder show-mob">
                     <a href="#" class="button">Запись на консультацию</a>
                     <a href="#" class="button">Позвонить</a>
                 </div>
@@ -47,7 +47,7 @@
 </header>
 <main>
     <div class="container">
-        <div class="main-articles-holder">
+        <div class="main-holder">
             <div class="introduction">
                 <h2>ВАШ НАДЕЖНЫЙ ПАРТНЕР В СФЕРЕ ЮРИДИЧЕСКИХ УСЛУГ</h2>
                 <div class="video-holder">
@@ -56,20 +56,109 @@
                             allowfullscreen></iframe>
                 </div>
             </div>
+            <div class="intro-categories">
+                <div class="item">
+                    <div class="top-info">
+                        <div class="preview">
+                            <img src="img/test.jpg" alt="Preview">
+                        </div>
+                        <div class="description">
+                            <h3 class="title">Информация для выезда ребенка за границу</h3>
+                            <div class="short-description">
+                                <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность поехать
+                                    или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня, руководители
+                                    танцевального коллектива, тренер спортивной команды, в составе школьной экскурсии, и
+                                    тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                    ребенка за границу с лицами, которые его сопровождают.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom-info">
+                        <time>23 Марта 2019 - 15:29</time>
+                        <a href="#" class="link">Читать статью</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="top-info">
+                        <div class="preview">
+                            <img src="img/test.jpg" alt="Preview">
+                        </div>
+                        <div class="description">
+                            <h3 class="title">Информация для выезда ребенка за границу</h3>
+                            <div class="short-description">
+                                <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность поехать
+                                    или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня, руководители
+                                    танцевального коллектива, тренер спортивной команды, в составе школьной экскурсии, и
+                                    тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                    ребенка за границу с лицами, которые его сопровождают.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom-info">
+                        <time>23 Марта 2019 - 15:29</time>
+                        <a href="#" class="link">Читать статью</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="top-info">
+                        <div class="preview">
+                            <img src="img/test.jpg" alt="Preview">
+                        </div>
+                        <div class="description">
+                            <h3 class="title">Информация для выезда ребенка за границу</h3>
+                            <div class="short-description">
+                                <p>В отдельных случаях в заграничное путешествие с … детьми имеют возможность поехать
+                                    или папа, или мама, а иногда лишь дедушка и / или бабушка, или няня, руководители
+                                    танцевального коллектива, тренер спортивной команды, в составе школьной экскурсии, и
+                                    тому подобное. Возникаєт вопрос сбора документов, которые санкционируют выезд
+                                    ребенка за границу с лицами, которые его сопровождают.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bottom-info">
+                        <time>23 Марта 2019 - 15:29</time>
+                        <a href="#" class="link">Читать статью</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pre-footer">
+            <!--no-media class-->
+            <div class="fb-holder">
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgoodevs%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1980581345532475"
+                        style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                        allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
+            <div class="subscribe-block">
+                <div class="quote-block">
+                    <h4>Успех адвокатского объединения - успех клиента.</h4>
+                    <p>Многолетний опыт адвокатской деятельности в сочетании с нестандартным подходом, обеспечит
+                        разработку эффективной линии защиты Вас и Вашего бизнеса с использованием законных правовых
+                        инструментов. Профессионализм наших сотрудников, постоянный контакт с клиентом, гарантирует Вам
+                        спокойный сон даже в сложной ситуации.</p>
+                </div>
+                <form class="subscribe-form">
+                    <div class="h5">Подписаться на новости</div>
+                    <div class="action-holder">
+                        <input type="text" placeholder="E-mail">
+                        <button type="submit">Подписаться</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </main>
 <footer>
     <div class="container">
         <div class="nav-wrapper">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img src="img/logo.svg" alt="logo">
             </a>
             <nav>
                 <ul>
-                    <li><a data-link="1" href="#" class="active">Главная</a></li>
+                    <li><a data-link="1" href="index.html" class="active">Главная</a></li>
                     <li><a data-link="2" href="#">О нас</a></li>
-                    <li><a data-link="3" href="#">Услуги</a></li>
+                    <li><a data-link="3" href="services.html">Услуги</a></li>
                     <li><a data-link="4" href="#">Статьи</a></li>
                 </ul>
                 <div class="rights">
