started about us page

--- a/app/services.html
+++ b/app/services.html
@@ -27,7 +27,7 @@
                 </div>
                 <ul>
                     <li><a data-link="1" href="index.html" class="active">Главная</a></li>
-                    <li><a data-link="2" href="#">О нас</a></li>
+                    <li><a data-link="2" href="about-us.html">О нас</a></li>
                     <li><a data-link="3" href="services.html">Услуги</a></li>
                     <li><a data-link="4" href="#">Статьи</a></li>
                 </ul>
@@ -124,7 +124,7 @@
             <nav>
                 <ul>
                     <li><a data-link="1" href="index.html" class="active">Главная</a></li>
-                    <li><a data-link="2" href="#">О нас</a></li>
+                    <li><a data-link="2" href="about-us.html">О нас</a></li>
                     <li><a data-link="3" href="services.html">Услуги</a></li>
                     <li><a data-link="4" href="#">Статьи</a></li>
                 </ul>
