need to do all articles

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -32,13 +32,13 @@
                     <li><a data-link="4" href="#">Статьи</a></li>
                 </ul>
                 <div class="btn-menu-holder show-mob">
-                    <a href="#" class="button">Запись на консультацию</a>
+                    <a href="contact-us.html" class="button">Запись на консультацию</a>
                     <a href="#" class="button">Позвонить</a>
                 </div>
             </nav>
         </div>
         <div class="action-wrapper">
-            <a href="#" class="button">Запись на консультацию</a>
+            <a href="contact-us.html" class="button">Запись на консультацию</a>
             <div class="burger show-mob">
                 <span></span>
             </div>
@@ -81,6 +81,112 @@
                 </ul>
             </div>
         </div>
+        <ul class="people-holder">
+            <li class="item animated">
+                <div class="content-holder">
+                    <div class="avatar"
+                         style="background-image: url('img/ava.png')">
+                        <a href="single.html" class="mask">More
+                            info</a>
+                    </div>
+                    <a href="single.html" class="name">Мелконян Лидия Григорьевна</a>
+                    <span class="review">Aдвокат, управляющий партнер Адвокатского Объединения «РУХ»</span>
+                    <div class="specialisation">
+                        <span class="title accordion">Специализация</span>
+                        <div class="spec-review panel">Адвокат, член Президиума Харьковской областной коллегии
+                            адвокатов,
+                            член
+                            ревизионной комиссии Союза адвокатов Украины, имеет стаж работы в адвокатуре 18 лет;
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="item animated">
+                <div class="content-holder">
+                    <div class="avatar"
+                         style="background-image: url('img/ava.png')">
+                        <a href="single.html" class="mask">More
+                            info</a>
+                    </div>
+                    <a href="single.html" class="name">Мелконян Лидия Григорьевна</a>
+                    <span class="review">Aдвокат, управляющий партнер Адвокатского Объединения «РУХ»</span>
+                    <div class="specialisation">
+                        <span class="title accordion">Специализация</span>
+                        <div class="spec-review panel">Адвокат, член Президиума Харьковской областной коллегии
+                            адвокатов,
+                            член
+                            ревизионной комиссии Союза адвокатов Украины, имеет стаж работы в адвокатуре 18 лет;
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="item animated">
+                <div class="content-holder">
+                    <div class="avatar"
+                         style="background-image: url('img/ava.png')">
+                        <a href="single.html" class="mask">More
+                            info</a>
+                    </div>
+                    <a href="single.html" class="name">Мелконян Лидия Григорьевна</a>
+                    <span class="review">Aдвокат, управляющий партнер Адвокатского Объединения «РУХ»</span>
+                    <div class="specialisation">
+                        <span class="title accordion">Специализация</span>
+                        <div class="spec-review panel">Адвокат, член Президиума Харьковской областной коллегии
+                            адвокатов,
+                            член
+                            ревизионной комиссии Союза адвокатов Украины, имеет стаж работы в адвокатуре 18 лет;
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="item animated">
+                <div class="content-holder">
+                    <div class="avatar"
+                         style="background-image: url('img/ava.png')">
+                        <a href="single.html" class="mask">More
+                            info</a>
+                    </div>
+                    <a href="single.html" class="name">Мелконян Лидия Григорьевна</a>
+                    <span class="review">Aдвокат, управляющий партнер Адвокатского Объединения «РУХ»</span>
+                    <div class="specialisation">
+                        <span class="title accordion">Специализация</span>
+                        <div class="spec-review panel">Адвокат, член Президиума Харьковской областной коллегии
+                            адвокатов,
+                            член
+                            ревизионной комиссии Союза адвокатов Украины, имеет стаж работы в адвокатуре 18 лет;
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <div class="btn-holder align-center">
+            <a href="all-experts.html" class="button">Смотреть всех экспертов</a>
+        </div>
+        <div class="clients">
+            <div class="title align-center">Наши клиенты</div>
+            <ul class="clients-holder">
+                <li>
+                    <a href="#">
+                        <img src="img/brand.png" alt="brand">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/brand.png" alt="brand">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/brand.png" alt="brand">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="img/brand.png" alt="brand">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </main>
 <footer>
@@ -102,7 +208,7 @@
             </nav>
         </div>
         <div class="action-wrapper">
-            <a href="#" class="button">Запись на консультацию</a>
+            <a href="contact-us.html" class="button">Запись на консультацию</a>
         </div>
     </div>
 </footer>
