--- a/app/article.html
+++ b/app/article.html
@@ -32,13 +32,13 @@
                     <li><a data-link="4" href="#">Статьи</a></li>
                 </ul>
                 <div class="btn-menu-holder show-mob">
-                    <a href="#" class="button">Запись на консультацию</a>
+                    <a href="contact-us.html" class="button">Запись на консультацию</a>
                     <a href="#" class="button">Позвонить</a>
                 </div>
             </nav>
         </div>
         <div class="action-wrapper">
-            <a href="#" class="button">Запись на консультацию</a>
+            <a href="contact-us.html" class="button">Запись на консультацию</a>
             <div class="burger show-mob">
                 <span></span>
             </div>
@@ -127,7 +127,6 @@
                 </li>
             </ul>
         </div>
-
     </div>
 </main>
 <footer>
@@ -149,7 +148,7 @@
             </nav>
         </div>
         <div class="action-wrapper">
-            <a href="#" class="button">Запись на консультацию</a>
+            <a href="contact-us.html" class="button">Запись на консультацию</a>
         </div>
     </div>
 </footer>
