--- a/app/contact-us.html
+++ b/app/contact-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Services | RUH</title>
+    <title>Contact us | RUH</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -45,53 +45,39 @@
         </div>
     </div>
 </header>
-<main class="services-page">
+<main class="contact-us">
     <div class="container">
-        <div class="services-main square-items">
-            <div class="quote-holder">
-                <blockquote>
-                    «Цивилизация привела к тому, что уже не важно, кто прав, а кто не прав; важно, чей адвокат лучше»
-                </blockquote>
-                <p>В жизни ничего нельзя предвидеть и очень часто различные трудности возникают неожиданно.
-                    Профессионализм
-                    и многолетний опыт сотрудников Адвокатского объединения «РУХ» в различных отраслях права позволят
-                    нам в
-                    кратчайшие сроки найти решение даже в самой сложной правовой ситуации.</p>
+        <div class="main-holder">
+            <div class="introduction">
+                <div class="h4">
+                    Контакты
+                </div>
             </div>
-
-            <div class="btn-holder">
-                <a href="#" class="button">Смотерть весь прайс</a>
+            <div class="intro-categories align-center">
+                <form class="consultation">
+                    <div class="action-holder">
+                        <label for="name">Ваше имя</label>
+                        <input id="name" type="text" placeholder="Имя">
+                    </div>
+                    <div class="action-holder">
+                        <label for="phone">Ваш телефон</label>
+                        <input id="phone" type="text" placeholder="Номер телефона">
+                    </div>
+                    <div class="action-holder">
+                        <label for="email">Ваш e-mail</label>
+                        <input id="email" type="email" placeholder="E-mail">
+                    </div>
+                    <div class="action-holder">
+                        <label for="question">Ваш вопрос</label>
+                        <textarea id="question" placeholder="Необходима консультация"></textarea>
+                    </div>
+                    <div class="action-holder">
+                        <button type="submit">
+                            Отправить
+                        </button>
+                    </div>
+                </form>
             </div>
-
-            <ul class="services-holder">
-                <li class="item">
-                    <div class="accordion">Помощь и поддержка квалифицированных и дипломированных адвокатов</div>
-                    <div class="panel">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </li>
-
-                <li class="item">
-                    <div class="accordion">Быстрое решение любой проблемы</div>
-                    <div class="panel">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </li>
-
-                <li class="item">
-                    <div class="accordion">Индивидуальный и оптимальный подход к каждому делу.</div>
-                    <div class="panel">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </li>
-            </ul>
-
         </div>
         <div class="pre-footer no-media ">
             <div class="subscribe-block">
