--- a/app/contact-us.html
+++ b/app/contact-us.html
@@ -29,7 +29,7 @@
                     <li><a data-link="1" href="index.html" class="active">Главная</a></li>
                     <li><a data-link="2" href="about-us.html">О нас</a></li>
                     <li><a data-link="3" href="services.html">Услуги</a></li>
-                    <li><a data-link="4" href="#">Статьи</a></li>
+                    <li><a data-link="4" href="articles.html">Статьи</a></li>
                 </ul>
                 <div class="btn-menu-holder show-mob">
                     <a href="contact-us.html" class="button">Запись на консультацию</a>
@@ -50,7 +50,20 @@
         <div class="main-holder">
             <div class="introduction">
                 <div class="h4">
-                    Контакты
+                    <span>Контакты</span>
+                    <a class="tel" href="tel:+38068999068">068 999 068</a>
+                    <address>
+                        <p>
+                            <span>ул. Мироносицкая 76,</span>
+                            <span>г.Харьков 61027</span>
+                            <span>info@ruh.kh.ua</span>
+                        </p>
+                    </address>
+
+                </div>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2564.053742444406!2d36.2412924!3d50.0103479!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a0d976473089%3A0xbdfdf565f306b888!2z0YPQuy4g0JzQuNGA0L7QvdC-0YHQuNGG0LrQsNGPLCA3Niwg0KXQsNGA0YzQutC-0LIsINCl0LDRgNGM0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDYxMDAw!5e0!3m2!1sru!2sua!4v1555692820425!5m2!1sru!2sua"
+                            width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="intro-categories align-center">
@@ -110,7 +123,7 @@
                     <li><a data-link="1" href="index.html" class="active">Главная</a></li>
                     <li><a data-link="2" href="about-us.html">О нас</a></li>
                     <li><a data-link="3" href="services.html">Услуги</a></li>
-                    <li><a data-link="4" href="#">Статьи</a></li>
+                    <li><a data-link="4" href="articles.html">Статьи</a></li>
                 </ul>
                 <div class="rights">
                     <span><a href="https://ruh.com.ua">ruh.com.ua</a>©2019 Все права защищены.</span>
